<resources>
    <string name="app_name">Xmas Control</string>
    <string name="lbldelete">Delete</string>
    <string name="lbladd">Add</string>
    <string name="lblset">Settings</string>
    <string name="lbledit">Edit</string>
    <string name="lblsave">Save</string>
    <string name="lblname">Name:</string>
    <string name="lblurl">Host:</string>
    <string name="lblcancel">Cancel</string>
    <string name="lbladdprint">Add Device</string>
    <string name="lbldelprint">Delete Device</string>
    <string name="lbledtprint">Edit Device</string>
    <string name="lblselact">Select Action</string>
    <string name="lblsetimg">Set Image</string>
    <string name="lblselimg">Select Image</string>
    <string name="lbloffline">Offline</string>
    <string name="lblonline">Online</string>
    <string name="lblpoffline">Device Offline</string>
    <string name="lblperm">Permission Required</string>
    <string name="lblpermsg">To select images you need to allow storage access.</string>
    <string name="lblinphost">Input host first</string>
    <string name="lblfailedset">Failed to set name\nAdd name to device settings</string>
    <string name="lbladdhost">You must enter a host/ip</string>
    <string name="lbladdname">You must enter a name</string>
    <string name="no_sequences_found">No Sequences Found</string>
    <string name="select_sequence">"Select Sequence: "</string>
    <string name="no_playlists_found">No Playlists Found</string>
    <string name="select_playlist">"Select Playlist: "</string>
    <string name="no_effects_found">No Effects Found</string>
    <string name="select_effect">"Select Effect: "</string>
    <string name="select_mode">"Select Mode: "</string>
    <string name="stop_effect">Stop Effect</string>
    <string name="start_effect">Start Effect</string>
    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop Test</string>
    <string name="playlists">Playlists</string>
    <string name="stop_playlist">Stop Playlist</string>
    <string name="prev_item">Prev Item</string>
    <string name="next_item">Next Item</string>
    <string name="start_sequence">Start Sequence</string>
    <string name="stop_sequence">Stop Sequence</string>
    <string name="add_controller">Add Controller</string>
    <string name="lessthan">\u003C</string>
    <string name="select">Select: </string>
    <string name="ok">\u0020\u0020\u0020OK\u0020\u0020\u0020</string>
    <string name="cancel">Cancel</string>
    <string name="start_playlist">Start Playlist</string>
    <string name="sequences">Sequences</string>
    <string name="reboot_board">Reboot Board?</string>
    <string name="confirm">Confirm</string>
    <string name="volume">Volume:</string>
    <string name="cpu_temp">"CPU Temp: "</string>
    <string name="temp1">"Temp1: "</string>
    <string name="temp2">"\nTemp2: "</string>
    <string name="build">"\nBuild: "</string>
    <string name="device_unavailable">Device Unavailable</string>
    <string name="add_a_controller">Add FPP or a Falcon Controller</string>
    <string name="close">Close</string>
    <string name="error_log">Error Log</string>
    <string name="pass">Pass:</string>
    <string name="login">Login:</string>
    <string name="ui_has_auth">UI Has Authentication</string>
    <string name="invalid_auth_char">You cannot use the : character in the username or password</string>
    <string name="http_error_401">Authorization required\nPlease check your login details</string>
    <string name="http_error_unknown">Unknown</string>
    <string name="error">ERROR</string>
    <string name="device_error">Device Error</string>
    <string name="_9724_lead_in">◼ Lead In</string>
    <string name="_9724_lead_out">◼ Lead Out</string>
    <string name="repeat_playlist">Repeat Playlist</string>
</resources>