<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">


    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/tvborder"
        android:columnCount="1"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="6"

            app:layout_constraintTop_toBottomOf="@+id/textTitle" />
    </GridLayout>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

    </androidx.recyclerview.widget.RecyclerView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="161dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layoutDirection="rtl"
        android:text="@string/repeat_playlist"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/_9724_lead_in"
        android:textColor="#90EE90"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/_9724_lead_out"
        android:textColor="#FA8072"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintStart_toStartOf="parent" />



    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selected_button"
            android:onClick="startPlayList"
            android:src="@drawable/play_arrow_24px"
            android:text="@string/start_playlist" />

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selected_button"
            android:onClick="stopPlayList"
            android:src="@drawable/stop_24px"
            android:text="@string/stop_playlist" />

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_row="1"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selected_button"
            android:onClick="prevPlaylistItem"
            android:src="@drawable/skip_previous_24px"
            android:text="@string/prev_item" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_row="1"
            android:layout_rowWeight="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selected_button"
            android:onClick="nextPlaylistItem"
            android:src="@drawable/skip_next_24px"
            android:text="@string/next_item" />


    </GridLayout>




</androidx.constraintlayout.widget.ConstraintLayout>