<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtDbg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/tvborder"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/errIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:onClick="openErrors"
        app:layout_constraintEnd_toEndOf="@+id/txtDbg"
        app:layout_constraintTop_toTopOf="@+id/txtDbg" />

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="6dp"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDbg">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="1"
            android:layout_marginStart="8dp"
            android:layout_columnWeight="1"
            android:onClick="stopEffect"
            android:text="@string/stop_effect" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_marginEnd="8dp"
            android:layout_columnWeight="1"
            android:onClick="startEffect"
            android:text="@string/start_effect" />


    </GridLayout>

    <GridLayout
        android:id="@+id/grid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="6dp"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid1">


        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginEnd="8dp"
            android:onClick="startTest"
            android:text="@string/start_test" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="8dp"
            android:onClick="stopTest"
            android:text="@string/stop_test" />


    </GridLayout>

    <GridLayout
        android:id="@+id/grid3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="6dp"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid2">


        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="openPlaylists"
            android:text="@string/playlists" />


    </GridLayout>

    <GridLayout
        android:id="@+id/grid4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="6dp"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid3">

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:onClick="openSequences"
            android:text="@string/sequences" />


    </GridLayout>

    <SeekBar
        android:id="@+id/volBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/volBar"
        app:layout_constraintStart_toEndOf="@+id/lblVol" />

    <TextView
        android:id="@+id/lblVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/volume"
        app:layout_constraintBottom_toTopOf="@+id/volBar"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divTop"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/txtVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divLeft"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/divBottom"
        app:layout_constraintTop_toTopOf="@+id/divTop" />

    <View
        android:id="@+id/divRight"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="21dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/divBottom"
        app:layout_constraintTop_toTopOf="@+id/divTop" />

    <View
        android:id="@+id/divBottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="26dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>